@@ -1,4 +1,7 @@
 2011-03-30 lucas
+* Enabled russian language and accounting plan. (Thanks to Vera Kurpas for the contributions).
+
+2011-03-30 lucas
 * Updated default_accounts_express.ods with Russian accounts information. (Thanks to Vera Kurpas.)
 
 2010-01-07 lucas
